WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278091
Fix visionOS build error with recent SDK
https://bugs.webkit.org/show_bug.cgi?id=278091
Summary
Fix visionOS build error with recent SDK
Jean-Yves Avenard [:jya]
Reported
2024-08-14 02:45:57 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-08-14 02:46:13 PDT
<
rdar://problem/133828604
>
Jean-Yves Avenard [:jya]
Comment 2
2024-08-14 02:47:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32185
EWS
Comment 3
2024-08-14 02:51:06 PDT
Committed
282225@main
(514d3c08b3e3): <
https://commits.webkit.org/282225@main
> Reviewed commits have been landed. Closing PR #32185 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug