Fix visionOS build error with recent SDK https://bugs.webkit.org/show_bug.cgi?id=278091 rdar://133828604

Unreviewed build fix.

* Tools/WebKitTestRunner/cocoa/TestControllerCocoa.mm:

Canonical link: https://commits.webkit.org/282225@main